[gd_scene load_steps=2 format=3 uid="uid://dfw6ty31veih5"]

[ext_resource type="Script" uid="uid://djhe2fg6td20x" path="res://Scripts/UI/game_over_ui.gd" id="1_8ir8q"]

[node name="GameOverUI" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8ir8q")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 67.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="PanelContainer"]
layout_mode = 0
offset_top = 8.0
offset_right = 87.0
offset_bottom = 31.0
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="PanelContainer"]
layout_mode = 0
offset_top = 41.0
offset_right = 87.0
offset_bottom = 64.0
text = "ScoreLabel"

[node name="NameInput" type="LineEdit" parent="PanelContainer"]
layout_mode = 0
offset_left = -1.0
offset_top = 79.0
offset_right = 187.0
offset_bottom = 110.0

[node name="SubmitButton" type="Button" parent="PanelContainer"]
layout_mode = 0
offset_left = 9.0
offset_top = 136.0
offset_right = 112.0
offset_bottom = 159.0
text = "Submit Score"
